--- a/styles.css
+++ b/styles.css
@@ -1,107 +1,89 @@
-:root {
-    --protein: lightskyblue;
-    --carbs: mediumspringgreen;
-    --fat: rgb(224, 205, 92);
-}
-
-h1, h2, h3, h4, h5 {
-    margin: 0;
-}
-
 ul {
-    text-align: left;
     list-style: none;
 }
 
-i {
-    margin: 0 5px;
-    display: inline-block;
-    vertical-align:middle;
-    height: calc(var(--size, 24px));
-    width: calc(var(--size, 24px));
+h2{
+    margin-bottom: 2.5rem;
 }
 
-i:hover {
-    transform: scale(1.4);
-    cursor: pointer;
+hr {
+    border: none;
+    border-top: 1px solid midnightblue;
+    margin: 5px 0;
 }
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: midnightblue;
-    background: honeydew;
-    background: radial-gradient(circle, honeydew 0%, lightskyblue 100%);
+    background: radial-gradient(circle, honeydew 0%, lightskyblue 100%) honeydew;
     text-align: center;
 }
 
-.logo {
-    font-size: 4rem;
-    color:  lightskyblue;
-    text-shadow: 1px 1px 2px black, 0 0 0.1em seagreen;
-    
-}
-
-.logo span {
-    color: mediumspringgreen;
-    text-shadow: 1px 1px 2px black, 0 0 0.1em midnightblue;
-}
-
-.calculator {
+.flexed {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
 
-.total, .ingredients {
-    min-width: 500px;
-    padding: 20px;
+/* Colors */
+.protein, .blue {--color: lightskyblue;}
+.carbs, .green {--color: mediumspringgreen;}
+.fat, .peach {--color: PeachPuff;}
+
+/* Body */
+
+.logo {
+    --icon-size: 4rem;
+    font-size: var(--icon-size);
+    color:  var(--color);
+    text-shadow: 1px 1px 2px black, 0 0 0.1em var(--color);
+}
+
+.bullet {
+    --icon-size: 2rem;
+    padding: 3px;
+    margin: 5px 10px;
+    border: 1px solid midnightblue;
+    border-radius: 50%;
+    background-color: var(--color);
+    font-size: 0.8rem;
+    align-items: center;
 }
 
 .pie-chart {
     height: 250px;
     width: 250px;
-    margin: 50px auto;
+    margin: 0 auto;
     border: 5px double white;
     border-radius: 50%;
-    background: conic-gradient(var(--protein) 0% 30%, var(--carbs) 30% 75%, var(--fat) 75% 100%);
+    background: conic-gradient(lightskyblue 0% 30%, mediumspringgreen 30% 75%, PeachPuff 75% 100%);
 }
 
-.total-list{
-    width: 50%;
-    margin: 0 auto;
-    text-align: left;
-    list-style: none;
-}
-
-.total-list li:before {
-    content: "\23FA \00A0";
-    text-shadow: 0 0 0.1em midnightblue;
-}
-
-.protein:before{
-    color: var(--protein);
-}
-
-.carbs:before{
-    color: var(--carbs);
-}
-
-.fat:before{
-    color: var(--fat);
-}
-
-.ingredient-item {
+.ingredient {
     border: 1px solid midnightblue;
     padding: 10px;
     margin-bottom: 10px;
+    text-align: left;
 }
 
-.ingredient-item header {
-    display: flex;
-    justify-content: space-between;
+.empty-list-message {
+    display: none;
 }
 
-/* Animated Icons */ 
+/* Icons */ 
+
+i {
+    margin: 0 5px;
+    display: inline-block;
+    vertical-align: middle;
+    height: calc(var(--icon-size, 24px));
+    width: calc(var(--icon-size, 24px));
+}
+
+i:hover {
+    transform: scale(1.3);
+}
 
 i[title = "logo"] {
     background: url("./img/logo.png") no-repeat 0 0;
@@ -139,11 +121,3 @@ i[title = "delete"]:hover {
     background-image: url("./img/delete.gif");
 }
 
-i[title = "delete"] {
-    background: url("./img/delete.png") no-repeat 0 0;
-    background-size: contain;
-}
-
-i[title = "delete"]:hover {
-    background-image: url("./img/delete.gif");
-}
