--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,33 @@ hr {
     margin: 7px 0;
 }
 
+input, input:focus {
+    background: rgba(255,255,255,0.1);
+    border: none;
+    outline: none;
+    color: inherit;
+    padding: 10px;
+    font-size: 1rem;
+    text-align: center;
+    margin: 10px;
+}
+
+input:focus-visible, input:hover{
+    box-shadow: 0 0 2px 1px white;
+}
+
+input:active {
+    background-color: rgba(0,0,0,0.1);
+}
+
+input[type="text"]{
+    width: 80%;
+}
+
+input[type="button"], input[type="submit"], input[type="reset"]{
+    width: 25%;
+    cursor: pointer;
+}
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -98,8 +125,15 @@ fieldset {
     background-color: darkslategrey;
     border-color: rgb(19, 32, 32);
     color:white;
-    min-width: 350px;
-    min-height: 350px;
+    max-width: 100vw;
+    max-height: 100vh;
+    min-height: 400px;
+    overflow-y: scroll;
+}
+
+fieldset table {
+    width: 100%;
+    margin: 10px;
 }
 
 /* Block animation */
