--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ body {
     margin-bottom: 10px;
     text-align: left;
     border: 1px solid black;
+    justify-content: space-between;
 }
 
 /* Form */
