--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ input:active {
     background-color: rgba(0,0,0,0.1);
 }
 
-input[type="text"]{
+form input[type="text"]{
     width: 80%;
 }
 
@@ -84,7 +84,7 @@ body {
 .bullet {
     --icon-size: 2rem;
     padding: 3px;
-    margin: 5px 10px;
+    margin: 5px 15px;
     border-radius: 50%;
     background-color: var(--color);
     font-size: 0.8rem;
